[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Ememy.gd" type="Script" id=1]
[ext_resource path="res://HealthBarEnemies.tscn" type="PackedScene" id=2]
[ext_resource path="res://ZombieanimationsNew.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/zombie-24.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/zombie-17.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.661867
height = 1.22341

[sub_resource type="CapsuleShape" id=2]
radius = 0.66
height = 1.22

[node name="Enemy1" type="KinematicBody" groups=[
"Enemies",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.19847, -0.732541, 3 )
input_ray_pickable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.101, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79933, 1.1235 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( -1.62921e-07, -1, 1.62921e-07, 0, -1.62921e-07, -1, 1, -1.62921e-07, 2.65431e-14, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, 15, 6, 15, -6 )

[node name="Area2" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.101, 1.35352 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Zombie2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.169931, 0 )

[node name="HealthBar" parent="Zombie2" instance=ExtResource( 2 )]

[node name="SwipeAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="BaseZombieNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.3
bus = "Zombie"

[node name="ZombieNoise" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
[connection signal="body_exited" from="Area2" to="." method="_on_Area2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ZombieNoise" to="." method="_on_ZombieNoise_timeout"]
